# TrainMap

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  flixbus_client.py  main.py  navitia_client.py  pyproject.toml  requirements.txt  sncf_client.py  test_flixbus_client.py  test_navitia_client.py  test_sncf_client.py  trenitalia_client.py
providers/: flixbus.py  navitia.py  trenitalia.py
scripts/: rebuild_flixbus_stops.py
static/: app.js  autocomplete.js  i18n.js  index.html  map.js  routes.js  sidebar.js  style.css
tests/: test_flixbus.py  test_navitia.py
