[project]
name = "train-map"
version = "0.1.0"
description = "Interactive map of direct train and bus connections across Europe."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
